--- a/luca_website.html
+++ b/luca_website.html
@@ -13,7 +13,7 @@
         
 
         <div class="sidebar">
-            <img class="myface" src="meee.JPG">
+            <img class="myface" src="meee.jpg">
             <p class="myname">Luca Silvio Hennig</p>
             <a href="#aboutme" class="index">ABOUT ME</a>
             <a href="#education" class="index">EDUCATION</a>
@@ -54,4 +54,5 @@
             <a href="https://www.instagram.com/hennigluca/" target="_blank"><img class="contact" src="insta.png"></a>
             </div>
     </body>
+
 </html>
