--- a/luca_website.html
+++ b/luca_website.html
@@ -17,8 +17,8 @@
             <p class="myname">Luca Silvio Hennig</p>
             <a href="#aboutme" class="index">ABOUT ME</a>
             <a href="#education" class="index">EDUCATION</a>
-            <a href="#workexp" class="index">WORK EXPERIENCE</a>
-            <a href="#projandpap" class="index">PROJECTS & PAPERS</a>
+            <a href="#workexperience" class="index">WORK EXPERIENCE</a>
+            <a href="#projectsandpapers" class="index">PROJECTS & PAPERS</a>
             <a href="#contact" class="index">CONTACT</a>
         </div>
         <div class="main">
@@ -35,7 +35,7 @@
                 gave consultations to students, created excercises, and assisted professor research</p>
             <p class="paragraph">&bull; As an ESN Corvinus member; I helped organize events for incoming erasmus and international students</p>
             <p class="paragraph">Full program specification can be found <a class="linklink" href="https://www.uni-corvinus.hu/downloads/b7gj.11js3ew/u-a-data-science-in-business-bachelor-program-2023-2420250619.pdf" target="_blank">here</a></p>
-            <p class="header" id="workexp">WORK EXPERIENCE</p>
+            <p class="header" id="workexperience">WORK EXPERIENCE</p>
             <p class="second_header"><a class="linklink" href="https://www.nilfisk.com/global/" target="_blank">Nilfisk</a> — <i>Product Data Intern</i>
             <p class="paragraph">July 2024 - August 2025</p>
             <p class="paragraph">&bull; Mainly helped in implementing a new product data system; I cleaned over 140,000 rows of segmented and unorganized data,
@@ -46,7 +46,7 @@
             <p class="paragraph">&bull; Served drinks to drunk people and helped sober people get drunk</p>
             
             
-            <p class="header" id="projandpap">PROJECTS & PAPERS</p>
+            <p class="header" id="projectsandpapers">PROJECTS & PAPERS</p>
             <p class="paragraph">Nothing yet but a statistics paper is coming soon! (hopefully)</p>
             <p class="header" id="contact">CONTACT</p>
             <p class="paragraph"><a class="linklink" href="mailto:lucahennig33@gmail.com" target="_blank">lucahennig33@gmail.com</a></p>
@@ -56,3 +56,4 @@
     </body>
 
 </html>
+
